implement JPA adapters and adjustet the mappers. Add  exceptions and Result in domain for the JPA adapters