@@ -10,20 +10,20 @@ import java.util.stream.Collectors;
 
 public class JPAUserMapper {
 
-    public static Member toDomain(MemberEntity memberEntity) {
+    private static Member toDomain(MemberEntity memberEntity) {
         return new Member(memberEntity.getId(), memberEntity.getFirstName(), memberEntity.getLastName(), memberEntity.getEmail(),
                 memberEntity.getPassword(), memberEntity.getGender(), memberEntity.getBornOn(), memberEntity.getCreatedAt(),
                 memberEntity.getExercises().stream().map(ExerciseEntity::getId).toList(),
                 memberEntity.getWorkouts().stream().map(WorkoutEntity::getId).toList(),
-                memberEntity.getAssignments().stream().map((as)->as.getCoach().getId()).collect(Collectors.toList()));
+                memberEntity.getAssignments().stream().map((as)->as.getCoach().getId()).toList());
     }
 
-    public static Coach toDomain(CoachEntity coachEntity) {
+    private static Coach toDomain(CoachEntity coachEntity) {
         return new Coach(coachEntity.getId(), coachEntity.getFirstName(), coachEntity.getLastName(), coachEntity.getEmail(),
                 coachEntity.getPassword(), coachEntity.getGender(), coachEntity.getBornOn(), coachEntity.getCreatedAt(),
                 coachEntity.getExercises().stream().map(ExerciseEntity::getId).toList(),
                 coachEntity.getWorkouts().stream().map(WorkoutEntity::getId).toList(),
-                coachEntity.getAssignments().stream().map((as)->as.getMember().getId()).collect(Collectors.toList()));
+                coachEntity.getAssignments().stream().map((as)->as.getMember().getId()).toList());
     }
 
     public static MemberEntity toEntity(Member member) {
@@ -34,5 +34,10 @@ public class JPAUserMapper {
     public static CoachEntity toEntity(Coach coach) {
         return new CoachEntity(coach.getId(), coach.getFirstName(), coach.getLastName(), coach.getEmail(),
                 coach.getPassword(), coach.getGender(), coach.getBornOn(), coach.getCreatedAt());
+    }
+
+    public static User toDomain(UserEntity user) {
+        if(user instanceof MemberEntity member) return JPAUserMapper.toDomain(member);
+        return JPAUserMapper.toDomain((CoachEntity) user);
     }
 }
